syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

enum PlayerDieType {
	PLAYER_DIE_TYPE_NONE = 0;
	PLAYER_DIE_TYPE_KILL_BY_MONSTER = 1;
	PLAYER_DIE_TYPE_KILL_BY_GEAR = 2;
	PLAYER_DIE_TYPE_FALL = 3;
	PLAYER_DIE_TYPE_DRAWN = 4;
	PLAYER_DIE_TYPE_ABYSS = 5;
	PLAYER_DIE_TYPE_GM = 6;
	PLAYER_DIE_TYPE_CLIMATE_COLD = 7;
	PLAYER_DIE_TYPE_STORM_LIGHTING = 8;
}
